--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             backdrop-filter: blur(10px);
             border-radius: 12px;
             box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
+            display: none; /* Initially Hidden */
             animation: fadeIn 1.5s ease-in-out;
         }
 
@@ -144,7 +145,6 @@
                 transform: translate(-50%, -50%);
             }
         }
-
     </style>
 </head>
 <body>
@@ -197,6 +197,11 @@
     </div>
 
     <script>
+        // Show the form after 5 seconds
+        setTimeout(function() {
+            document.getElementById("formContainer").style.display = "block";
+        }, 5000);
+
         document.getElementById("contactForm").addEventListener("submit", function(event) {
             event.preventDefault();
 
