--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Floating Form</title>
+    <title>Big Dawg Chandigarh</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -46,7 +46,6 @@
             backdrop-filter: blur(10px);
             border-radius: 12px;
             box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
-            display: none; /* Initially Hidden */
             animation: fadeIn 1.5s ease-in-out;
         }
 
@@ -116,24 +115,6 @@
             animation: fadeIn 1.5s ease-in-out;
         }
 
-        .success-message p {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        .success-message .quote {
-            font-size: 14px;
-            font-style: italic;
-            opacity: 0.8;
-        }
-
-        .success-message .regards {
-            text-align: left;
-            font-size: 12px;
-            margin-top: 10px;
-            opacity: 0.7;
-        }
-
         /* Fade-in Animation */
         @keyframes fadeIn {
             from {
@@ -156,40 +137,40 @@
         </video>
     </div>
 
-    <!-- Smooth Floating Form -->
+    <!-- Form -->
     <div class="form-container" id="formContainer">
         <h2>Register Here</h2>
         <form id="contactForm">
             <div class="form-group">
                 <label>Name</label>
-                <input type="text" name="name" required placeholder="Enter your name">
+                <input type="text" id="name" required placeholder="Enter your name">
             </div>
 
             <div class="form-group">
                 <label>Age</label>
-                <input type="number" name="age" required placeholder="Enter your age">
+                <input type="number" id="age" required placeholder="Enter your age">
             </div>
 
             <div class="form-group">
                 <label>City</label>
-                <input type="text" name="city" required placeholder="Enter your city">
+                <input type="text" id="city" required placeholder="Enter your city">
             </div>
 
             <div class="form-group">
                 <label>Phone Number</label>
-                <input type="tel" name="phone" required placeholder="Enter your phone number">
+                <input type="tel" id="phone" required placeholder="Enter your phone number">
             </div>
 
             <div class="form-group">
                 <label>Email Address</label>
-                <input type="email" name="email" required placeholder="Enter your email">
+                <input type="email" id="email" required placeholder="Enter your email">
             </div>
 
             <button type="submit">Submit</button>
         </form>
     </div>
 
-    <!-- Success Message Box -->
+    <!-- Success Message -->
     <div class="success-message" id="successMessage">
         <p>🎉 Welcome to our family! 🎉</p>
         <p class="quote">"Learning never exhausts the mind. Keep growing, keep evolving!"</p>
@@ -197,29 +178,37 @@
     </div>
 
     <script>
-        // Show the form after 5 seconds
-        setTimeout(function() {
-            document.getElementById("formContainer").style.display = "block";
-        }, 5000);
-
         document.getElementById("contactForm").addEventListener("submit", function(event) {
             event.preventDefault();
 
-            var formData = new FormData(this);
+            var formData = {
+                name: document.getElementById("name").value,
+                age: document.getElementById("age").value,
+                city: document.getElementById("city").value,
+                phone: document.getElementById("phone").value,
+                email: document.getElementById("email").value
+            };
 
-            fetch("https://script.google.com/macros/s/AKfycbxhcHFbJZmtqlVteBRl0qTj7r9pLi0cIrqjJEqQnNljvfrH8jqmxvPHwFrGKUfPp6BAlg/exec", {
+            fetch("https://script.google.com/macros/s/AKfycbzaJZtdA2L2O5Oci0v-YKPcP8K_PZHWTf-QGc2BziWh5YwXSexWnKybx9kqDFfI-c0f7g/exec", {
                 method: "POST",
-                body: formData
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(formData)
             })
-            .then(response => response.text())
+            .then(response => response.json())
             .then(data => {
-                console.log(data);
-                
-                // Hide form and show success message
-                document.getElementById("formContainer").style.display = "none";
-                document.getElementById("successMessage").style.display = "block";
+                if (data.status === "success") {
+                    document.getElementById("formContainer").style.display = "none";
+                    document.getElementById("successMessage").style.display = "block";
+                } else {
+                    alert("Error: Could not submit. Please try again.");
+                }
             })
-            .catch(error => console.error("Error:", error));
+            .catch(error => {
+                console.error("Error:", error);
+                alert("Something went wrong. Please check your internet connection.");
+            });
         });
     </script>
 
