--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Dawg Chandigarh</title>
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
+    <title>Register Form</title>
     <style>
         * {
             margin: 0;
@@ -16,7 +12,7 @@
             font-family: 'Poppins', sans-serif;
         }
 
-        /* Full-screen Background */
+        /* Full-screen Video Background */
         .video-container {
             position: fixed;
             top: 0;
@@ -33,62 +29,42 @@
             object-fit: cover;
         }
 
-        /* Glassmorphic Form Container */
-        .form-container {
+        /* Floating & Smooth Entry Form */
+        .container {
             position: absolute;
-            top: 50%;
+            top: 60%;
             left: 50%;
             transform: translate(-50%, -50%);
             width: 90%;
-            max-width: 400px;
-            padding: 25px;
+            max-width: 350px;
+            padding: 20px;
             background: rgba(255, 255, 255, 0.15);
             backdrop-filter: blur(10px);
             border-radius: 12px;
             box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
-            animation: fadeIn 1.5s ease-in-out;
-        }
-
-        h2 {
             text-align: center;
-            color: #fff;
-            margin-bottom: 15px;
+            color: white;
+            opacity: 0; /* Initially hidden */
+            visibility: hidden;
+            transition: opacity 1.5s ease-in-out, transform 1.5s ease-in-out;
+            animation: floating 3s ease-in-out infinite;
         }
 
-        .form-group {
-            margin-bottom: 15px;
-        }
-
-        label {
-            display: block;
-            color: #fff;
-            font-weight: 600;
-            margin-bottom: 5px;
-        }
-
-        input {
+        /* Inputs & Button Styling */
+        input, button {
             width: 100%;
             padding: 10px;
-            border: none;
+            margin: 10px 0;
             border-radius: 5px;
+            border: none;
             outline: none;
-            transition: 0.3s;
-        }
-
-        input:focus {
-            transform: scale(1.05);
         }
 
         button {
-            width: 100%;
-            padding: 10px;
-            background: #ff9800;
-            border: none;
-            color: #fff;
-            font-size: 16px;
+            background: orange;
+            color: white;
             font-weight: bold;
             cursor: pointer;
-            border-radius: 5px;
             transition: 0.3s;
         }
 
@@ -97,7 +73,7 @@
             transform: scale(1.05);
         }
 
-        /* Success Message Box */
+        /* Success Message */
         .success-message {
             display: none;
             position: absolute;
@@ -115,6 +91,24 @@
             animation: fadeIn 1.5s ease-in-out;
         }
 
+        .success-message p {
+            font-size: 18px;
+            margin-bottom: 10px;
+        }
+
+        .success-message .quote {
+            font-size: 14px;
+            font-style: italic;
+            opacity: 0.8;
+        }
+
+        .success-message .regards {
+            text-align: left;
+            font-size: 12px;
+            margin-top: 10px;
+            opacity: 0.7;
+        }
+
         /* Fade-in Animation */
         @keyframes fadeIn {
             from {
@@ -125,6 +119,13 @@
                 opacity: 1;
                 transform: translate(-50%, -50%);
             }
+        }
+
+        /* Floating Animation */
+        @keyframes floating {
+            0% { transform: translate(-50%, -50%) translateY(0px); }
+            50% { transform: translate(-50%, -50%) translateY(-10px); }
+            100% { transform: translate(-50%, -50%) translateY(0px); }
         }
     </style>
 </head>
@@ -137,40 +138,20 @@
         </video>
     </div>
 
-    <!-- Form -->
-    <div class="form-container" id="formContainer">
+    <!-- Smooth Floating & Entry Form -->
+    <div class="container" id="formContainer">
         <h2>Register Here</h2>
-        <form id="contactForm">
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" id="name" required placeholder="Enter your name">
-            </div>
-
-            <div class="form-group">
-                <label>Age</label>
-                <input type="number" id="age" required placeholder="Enter your age">
-            </div>
-
-            <div class="form-group">
-                <label>City</label>
-                <input type="text" id="city" required placeholder="Enter your city">
-            </div>
-
-            <div class="form-group">
-                <label>Phone Number</label>
-                <input type="tel" id="phone" required placeholder="Enter your phone number">
-            </div>
-
-            <div class="form-group">
-                <label>Email Address</label>
-                <input type="email" id="email" required placeholder="Enter your email">
-            </div>
-
+        <form id="form">
+            <input type="text" name="Name" placeholder="Name" required>
+            <input type="number" name="Age" placeholder="Age" required>
+            <input type="text" name="City" placeholder="City" required>
+            <input type="tel" name="Phone Number" placeholder="Phone Number" required>
+            <input type="email" name="Email Address" placeholder="Email Address" required>
             <button type="submit">Submit</button>
         </form>
     </div>
 
-    <!-- Success Message -->
+    <!-- Success Message Box -->
     <div class="success-message" id="successMessage">
         <p>🎉 Welcome to our family! 🎉</p>
         <p class="quote">"Learning never exhausts the mind. Keep growing, keep evolving!"</p>
@@ -178,39 +159,31 @@
     </div>
 
     <script>
-        document.getElementById("contactForm").addEventListener("submit", function(event) {
+        // Show form after 5 seconds with smooth transition
+        setTimeout(() => {
+            const formContainer = document.getElementById("formContainer");
+            formContainer.style.opacity = "1";
+            formContainer.style.visibility = "visible";
+            formContainer.style.transform = "translate(-50%, -50%)";
+        }, 5000);
+
+        document.getElementById("form").addEventListener("submit", function(event) {
             event.preventDefault();
 
-            var formData = {
-                name: document.getElementById("name").value,
-                age: document.getElementById("age").value,
-                city: document.getElementById("city").value,
-                phone: document.getElementById("phone").value,
-                email: document.getElementById("email").value
-            };
+            const formData = new FormData(event.target);
+            const url = "https://script.google.com/macros/s/AKfycbyfE7EfJwHp9ETcErOvNFrU1_xKXbfP6c16qqT2PQzKKKG-L-n9nGlMGaIcMZGC8UvSGg/exec";
 
-            fetch("https://script.google.com/macros/s/AKfycbzaJZtdA2L2O5Oci0v-YKPcP8K_PZHWTf-QGc2BziWh5YwXSexWnKybx9kqDFfI-c0f7g/exec", {
+            fetch(url, {
                 method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify(formData)
+                body: formData
             })
-            .then(response => response.json())
+            .then(response => response.text())
             .then(data => {
-                if (data.status === "success") {
-                    document.getElementById("formContainer").style.display = "none";
-                    document.getElementById("successMessage").style.display = "block";
-                } else {
-                    alert("Error: Could not submit. Please try again.");
-                }
+                document.getElementById("formContainer").style.display = "none";
+                document.getElementById("successMessage").style.display = "block";
             })
-            .catch(error => {
-                console.error("Error:", error);
-                alert("Something went wrong. Please check your internet connection.");
-            });
+            .catch(error => alert("Error: " + error));
         });
     </script>
-
 </body>
 </html>
