--- a/index.html
+++ b/index.html
@@ -12,27 +12,16 @@
             font-family: 'Poppins', sans-serif;
         }
 
-        .video-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            z-index: -1;
-        }
-
-        .video-container video {
-            width: 100vw;
+        body {
+            background: url('https://github.com/GoldBoi4/Big-Dawgs/blob/main/IMG_4677.JPG?raw=true') no-repeat center center;
+            background-size: cover;
             height: 100vh;
-            object-fit: cover;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .container {
-            position: absolute;
-            top: 60%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             width: 90%;
             max-width: 350px;
             padding: 20px;
@@ -115,12 +104,6 @@
     </style>
 </head>
 <body>
-    <div class="video-container">
-        <video autoplay muted loop>
-            <source src="https://raw.githubusercontent.com/GoldBoi4/Website/main/BIG%20DAWGS%20INTRO%20WITH%20CROWN%20IN%20LAST.mp4" type="video/mp4">
-        </video>
-    </div>
-
     <div class="container" id="formContainer">
         <h2>Register Here</h2>
         <form id="form">
