--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: url('https://github.com/GoldBoi4/idk/blob/main/HELLO%20INDIA%20%20After%20your%20persistent%20requests%2C%20I'm%20thrilled%20to%20announce%20my%20India%20tour!It's%20never%20too%20late.%20I%20am%20back%2C%20and%20I%20am%20ready...%20but%20are%20youCHENNAI-%2019th%20April%20-%20%40tattva_thestudioDELHI-%2020th%20April%20-%20%40ifbcstudiosPUNE-%203rd.jpg') no-repeat center top fixed;
+      background: url('https://raw.githubusercontent.com/GoldBoi4/idk/main/HELLO%20INDIA%20%20After%20your%20persistent%20requests%2C%20I%27m%20thrilled%20to%20announce%20my%20India%20tour!It%27s%20never%20too%20late.%20I%20am%20back%2C%20and%20I%20am%20ready...%20but%20are%20youCHENNAI-%2019th%20April%20-%20%40tattva_thestudioDELHI-%2020th%20April%20-%20%40ifbcstudiosPUNE-%203rd.jpg') no-repeat center top fixed;
       background-size: cover;
       display: flex;
       justify-content: center;
@@ -138,7 +138,7 @@
       <div id="popupMessage">✅ Thank you for joining Us!</div>
       <div id="paymentPortal">
         <h3>Pay ₹850 here</h3>
-        <img src="https://github.com/GoldBoi4/idk/blob/main/WhatsApp%20Image%202025-05-16%20at%2022.22.56_b13e3b87.jpg" alt="QR Code" />
+        <img src="https://raw.githubusercontent.com/GoldBoi4/idk/main/WhatsApp%20Image%202025-05-16%20at%2022.22.56_b13e3b87.jpg" alt="QR Code" />
         <div class="price">₹850</div>
       </div>
     </div>
